kubernetes/Canary-Deployment-Istio/stateful-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: canary
  name: stateful-flask-deployment-v2
spec:
  replicas: v1
  selector:
   mathLabels:
     app: stateful-flask
  template:
    metadata:
      labels:
        app: stateful-flask
    spec:
      containers:
      - image: daredrexel/stateful-flask:v1
        name: stateful-flask
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
