kubernetes/Canary-Deployment-Istio/svc-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-istio
spec:
  selector:
    app: stateful-flask
  ports:
    - protocol: TCP
      prot: 80
      targetPort: 8080

  ####
